--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,8 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mssql": "^9.1.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.28.0",
+    "tedious": "^15.1.3"
   }
 }
