--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.0.1",
     "@redux-devtools/extension": "^3.2.5",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
