--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -L"
+    "server":"nodemon -L",
+    "client":"cd.. && npm run dev --prefix ./client",
+    "start": "concurrently --kill-others-on-fail \"npm run server\" \" npm run client\" "
+
   },
   "keywords": [],
   "author": "",
@@ -19,5 +22,8 @@
     "nodemon": "^2.0.20",
     "sequelize": "^6.28.0",
     "tedious": "^15.1.3"
+  },
+  "devDependencies": {
+    "concurrently": "^7.6.0"
   }
 }
