--- a/api/package.json
+++ b/api/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server":"nodemon -L",
-    "client":"cd.. && npm run dev --prefix ./client",
+    "server": "nodemon -L",
+    "client": "cd.. && npm run dev --prefix ./client",
     "start": "concurrently --kill-others-on-fail \"npm run server\" \" npm run client\" "
-
   },
   "keywords": [],
   "author": "",
@@ -17,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mercadopago": "^1.5.15",
     "morgan": "^1.10.0",
     "mssql": "^9.1.1",
     "nodemon": "^2.0.20",
