--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.0.1",
+    "@emailjs/browser": "^3.10.0",
     "@redux-devtools/extension": "^3.2.5",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
@@ -21,7 +22,8 @@
     "react-redux": "8.0.5",
     "react-router-dom": "6.8.0",
     "redux-thunk": "2.4.2",
-    "styled-components": "5.3.6"
+    "styled-components": "5.3.6",
+    "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
     "@types/react": "18.0.26",
