--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "mssql": "^9.1.1",
     "nodemon": "^2.0.20",
     "sequelize": "^6.28.0",
+    "socket.io": "^4.6.1",
     "tedious": "^15.1.3"
   },
   "devDependencies": {
