--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-redux": "8.0.5",
     "react-router-dom": "6.8.0",
     "redux-thunk": "2.4.2",
+    "socket.io-client": "^4.6.1",
     "styled-components": "5.3.6",
     "sweetalert2": "^11.7.3"
   },
