--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "react-icons": "4.7.1",
     "react-redux": "8.0.5",
     "react-router-dom": "6.8.0",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "2.4.2",
     "socket.io-client": "^4.6.1",
     "styled-components": "5.3.6",
