--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sadcom-ecommerce",
   "private": true,
-  "homepage": "https://festilandiacotillon.com",
+  "homepage": "https://festilandiacotillon.com/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
