--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,7 @@
 VITE_APP_AUTH0_DOMAIN=dev-5gwtap86i6z84pxw.us.auth0.com
 VITE_AUTH0_CLIENT_ID=xSjFjns2wmPNyZsyn9ePZmh23tGP35eL
+VITE_AUTH0_AUDIENCE=http://localhost:4000
+VITE_MP_ACCESS_TOKEN=APP_USR-2889120682731276-041423-74a6e8604a7072d3aac50a25b581ac45-1353138790
+VITE_PUBLIC_KEY=APP_USR-78da69a8-6cd7-4e37-8113-4e7eb7a1112c
 
 //import.meta.env para leer, como process.env en reactapp
