--- a/api/package.json
+++ b/api/package.json
@@ -16,11 +16,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mercadopago": "^1.5.15",
     "morgan": "^1.10.0",
     "mssql": "^9.1.1",
     "mysql2": "^3.2.0",
     "nodemon": "^2.0.20",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "sequelize": "^6.28.0",
     "socket.io": "^4.6.1",
     "tedious": "^15.1.3"
