--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.0.1",
     "@emailjs/browser": "^3.10.0",
+    "@mercadopago/sdk-react": "^0.0.8",
     "@redux-devtools/extension": "^3.2.5",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "jsonwebtoken": "^9.0.0",
+    "mercadopago": "^1.5.15",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
