--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.0",
     "mssql": "^9.1.1",
     "mysql2": "^3.2.0",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
