--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@auth0/auth0-react": "^2.0.1",
     "@emailjs/browser": "^3.10.0",
     "@mercadopago/sdk-react": "^0.0.8",
+    "@react-pdf/renderer": "^3.1.9",
     "@redux-devtools/extension": "^3.2.5",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
@@ -23,6 +24,7 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
     "react-icons": "4.7.1",
+    "react-pdf": "^6.2.2",
     "react-redux": "8.0.5",
     "react-router-dom": "6.8.0",
     "redux": "^4.2.1",
